git commit -m 'Fixing some errors on mobile'

--- a/styling.css
+++ b/styling.css
@@ -282,7 +282,7 @@ ul {
     }
 
     .listContainer {
-      justify-content: left;
+     align-items: center;
 
     }
 
